apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__cache_keys_nullable_data.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: body.extensions
---
{
  "apolloCacheDebugging": {
    "version": "1.0",
    "data": [
      {
        "key": "version:1.2:subgraph:stuff:type:Query:hash:[query-hash]:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
        "invalidationKeys": [
          "subgraph-stuff",
          "type-stuff-Query"
        ],
        "indexes": {
          "subgraph": true,
          "type": true,
          "cache_tag": true
        },
        "kind": {
          "rootFields": [
            "getStatus"
          ]
        },
        "subgraphName": "stuff",
        "subgraphRequest": {
          "query": "{ getStatus(id: \"1\") { __typename stuffDetails id items { id name } } }"
        },
        "source": "subgraph",
        "cacheControl": {
          "created": 0,
          "noStore": true
        },
        "shouldStore": false,
        "data": {
          "data": {
            "getStatus": {
              "__typename": "Status",
              "stuffDetails": "stuff we have",
              "id": "1",
              "items": [
                {
                  "id": "i1",
                  "name": null
                }
              ]
            }
          }
        },
        "warnings": [
          {
            "code": "CACHE_CONTROL_NO_STORE",
            "links": [
              {
                "url": "https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Headers/Cache-Control",
                "title": "Cache-Control header documentation"
              }
            ],
            "message": "Either the request or the subgraph response contained a Cache-Control header with no-store, so the data was not cached"
          },
          {
            "code": "NO_CACHE_TAG_ON_ROOT_FIELD",
            "links": [
              {
                "url": "https://www.apollographql.com/docs/graphos/routing/performance/caching/response-caching/invalidation#invalidation-methods",
                "title": "Add '@cacheTag' in your schema"
              }
            ],
            "message": "No cache tags are specified on your root fields query. If you want to use active invalidation, you'll need to add cache tags on your root field."
          }
        ]
      },
      {
        "key": "version:1.2:subgraph:status:type:Status:representation:db667609a8d53a2cd37059aed86e44088a10ec65213783b7aeac4ffe6cb761a4:hash:[query-hash]:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
        "invalidationKeys": [
          "subgraph-status",
          "type-status-Status",
          "status-1-"
        ],
        "indexes": {
          "subgraph": true,
          "type": true,
          "cache_tag": true
        },
        "kind": {
          "typename": "Status",
          "entityKey": {
            "id": "1",
            "items": [
              {
                "id": "i1",
                "name": null
              }
            ]
          }
        },
        "subgraphName": "status",
        "subgraphRequest": {
          "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Status { statusDetails } } }",
          "variables": {
            "representations": [
              {
                "items": [
                  {
                    "id": "i1",
                    "name": null
                  }
                ],
                "id": "1",
                "__typename": "Status"
              }
            ]
          }
        },
        "source": "subgraph",
        "cacheControl": {
          "created": 0,
          "noStore": true
        },
        "shouldStore": false,
        "data": {
          "data": {
            "statusDetails": "status details"
          }
        },
        "warnings": [
          {
            "code": "CACHE_CONTROL_NO_STORE",
            "links": [
              {
                "url": "https://developer.mozilla.org/en-US/docs/Web/HTTP/Reference/Headers/Cache-Control",
                "title": "Cache-Control header documentation"
              }
            ],
            "message": "Either the request or the subgraph response contained a Cache-Control header with no-store, so the data was not cached"
          }
        ]
      }
    ]
  }
}
