apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__integration_test_basic-2.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: v
---
{
  "topProducts": [
    {
      "__typename": "Product",
      "name": "chair",
      "upc": "1"
    },
    {
      "__typename": "Product",
      "name": "table",
      "upc": "2"
    },
    {
      "__typename": "Product",
      "name": "plate",
      "upc": "3"
    }
  ]
}
