apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__integration_test_basic-3.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: v
---
{
  "reviews": [
    {
      "body": "I can sit on it"
    }
  ]
}
