apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__integration_test_with_nested_field_set-2.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: v
---
{
  "allProducts": [
    {
      "name": "Test",
      "createdBy": {
        "__typename": "User",
        "email": "test@test.com",
        "country": {
          "a": "France"
        }
      }
    }
  ]
}
