apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__integration_test_with_nested_field_set-3.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: v
---
{
  "name": "test"
}
