apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_authorization-2.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: response
---
{
  "data": {
    "me": null,
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          },
          {
            "body": "I can eat on it",
            "author": {
              "username": "charles"
            }
          }
        ]
      }
    ]
  },
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "me"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ]
}
