apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_basic-2.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "topProducts": [
    {
      "__typename": "Product",
      "upc": "1",
      "name": "chair"
    },
    {
      "__typename": "Product",
      "upc": "2",
      "name": "table"
    }
  ]
}
