apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_basic-4.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "plate",
        "reviews": [
          {
            "body": "I can eat in it"
          }
        ]
      }
    ]
  }
}
