apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__response_cache_basic-5.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: "v.as_object().unwrap().get(\"data\").unwrap()"
---
{
  "reviews": [
    {
      "body": "I can eat in it"
    }
  ]
}
